--- a/server/ffmpegLib/CMakeLists.txt
+++ b/server/ffmpegLib/CMakeLists.txt
@@ -33,9 +33,9 @@ add_executable(memcpytest memcpytest.cpp)
 
 
 add_library(server3 SHARED server.cpp)
-target_link_libraries(server3 avformat avutil avcodec avdevice avfilter)
+target_link_libraries(server3 avformat avutil avcodec avdevice avfilter swscale)
 add_executable(server4 server.cpp)
-target_link_libraries(server4 avformat avutil avcodec avdevice avfilter)
+target_link_libraries(server4 avformat avutil avcodec avdevice avfilter swscale)
 
 if (CMAKE_BUILD_TYPE MATCHES "Release")
     add_definitions(/O2)
