--- a/app2/app/build.gradle
+++ b/app2/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation("com.squareup.okhttp3:okhttp:4.5.0")
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
 }
